--- a/maintance/new.css
+++ b/maintance/new.css
@@ -1,10 +1,79 @@
-body{
-	background-color: rgb(31,75,184);
+@font-face {
+    font-family: OpenSans, sans-serif;
+    src: url(dist/font/OpenSans-VariableFont_wdth,wght.ttf);
 }
 
+html, body{
+	background-color: #1b3071;
+	background: linear-gradient(#1f4bb8, #1b3071);
+	font-family: OpenSans, sans-serif;
+	height: 100%;
+	overflow: hidden;
+}
+
+/*
 div{
 	margin: 200px;
-	font-family: "Times New Roman", Times, serif;
+	font-family: "Times New Roman", Times, serif;	
 	
+}
+*/
+
+.col-12{
+	color: white;
+}
+
+.text {
+	color:#ccc;
+	font-size: 1.15rem;
+	position: relative;
+	bottom: 2rem;
+}
+
+.heading{
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: 700;
+	color:white;
+	font-size: 2.75rem;
+}
+
+.moon{
+	position: relative;
+	top:1rem;
+	left: 1rem;
+	width: 1px;
+	height: 1px;
+	background-color: #e4e4e4;
+	border: 20px solid #e4e4e4;
+	border-radius: 50%;
+	justify-self: center;
+	margin: 0px auto;
+	box-shadow: 0px 0px 25px white;
+	filter: blur(2px);
+}
+
+.img-fluid{
+	width: 100%;
+}
+
+
+.timer{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	display: flex;
+	height: 2rem;
+	justify-content: center;
+}
+
+.timer span{
+	background-color: #e4e4e4;
+	border: 20px solid #e4e4e4;
+	font-size: 2rem;
+}
+
+@media screen {
 	
 }
