--- a/new.css
+++ b/new.css
@@ -1,10 +1,6 @@
-body{
-	background-color: rgb(31,75,184);
-}
-
-div{
-	margin: 200px;
-	font-family: "Times New Roman", Times, serif;
-	
+body{background-color: green;
+background-image:url("b.jpg");
+background-repeat: repeat;
+background-attachment:fixed;
 	
 }
